--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/media/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Management" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/media/logo192.png" />
+    <meta name="apple-mobile-web-app-title" content="Management" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Management</title>
   </head>
