--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Management" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/media/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/media/tanzania128.png" />
+    <link
+      rel="apple-touch-startup-image"
+      href="%PUBLIC_URL%/media/tanzania512.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="128x128"
+      href="%PUBLIC_URL%/media/tanzania128.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="256x256"
+      href="%PUBLIC_URL%/media/tanzania256.png"
+    />
     <meta name="apple-mobile-web-app-title" content="Management" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Management</title>
   </head>
