--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/media/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#fdce84" />
     <meta name="description" content="Management" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/media/tanzania128.png" />
     <link
       rel="apple-touch-startup-image"
       href="%PUBLIC_URL%/media/tanzania512.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="64x64"
+      href="%PUBLIC_URL%/media/tanzania64.png"
     />
     <link
       rel="apple-touch-icon"
@@ -21,7 +25,12 @@
       sizes="256x256"
       href="%PUBLIC_URL%/media/tanzania256.png"
     />
-    <meta name="apple-mobile-web-app-title" content="Management" />
+    <link
+      rel="apple-touch-icon"
+      sizes="512x512"
+      href="%PUBLIC_URL%/media/tanzania512.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="CCJManagement" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
